--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
                     <a class="ewk_banner_link" href="Controller/Ccontroller.php?var1=1">Ingreso de datos</a>
                     <a class="ewk_banner_link" href="Controller/Ccontroller.php?var1=2">Mostrar Datos</a>
                     <a class="ewk_banner_link" href="Controller/Ccontroller.php?var1=3">Buscar</a>
-                    <a class="ewk_banner_link" href="Controller/Ccontroller.php?var1=4">Eliminar</a>
+                    <a class="ewk_banner_link" href="Controller/Ccontroller.php?var1=4">Eliminar-Editar</a>
                     <!-- para los efectos de pasar el mouse -->
                 </div>
             </div>
